--- a/docs/en-gb/modules/markets/partials/mirakl-api-key.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-api-key.adoc
@@ -1,10 +1,11 @@
-To create the connection for {market} between plentymarkets and Mirakl, you need an API key. To generate the API key, proceed as follows:
+The connection between plentymarkets and Mirakl is created using an API. As such, you need an API key to set up your {market} account in plentymarkets. Create this API key in the Mirakl back end.
 
 [.instruction]
 Generating the API key:
 
 . Open the Mirakl back end.
-. Click on the user icon (icon:user[]).
+. Click on the user icon (icon:user-circle[]).
 . Go to the *API keys* tab.
 . Generate a new API key for {market}.
-. Copy the API key to your clipboard. You need this key to set up your {market} account in plentymarkets.
+. Copy the API key to your clipboard.
+. Keep the API key ready to set up your {market} account in plentymarkets.
