--- a/docs/en-gb/modules/markets/partials/mirakl-data-product-data-export.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-data-product-data-export.adoc
@@ -1,22 +1,27 @@
-The listing process at {market} takes place in two steps: First, the products are created. Then, after the marketplace has approved the product data, offers for the created products can be activated. Both export processes, their requirements as well as transfer options are described in the following sub-chapters.
+The listing process for {market} involves two steps:
 
-[#transfer-product-data]
-=== Transferring product data
+* Product data: Product data is needed to create a product on {market}. This data must be approved by the market.
+* Offer data: After the product data was approved by the market, you can activate offers for the products you created.
 
-In this chapter, you will learn how to transfer product data to the marketplace and which requirements have to be met. This data comes from the catalogue *{assistant-name} Catalog* that you created.
-
-=== Requirements for transferring product data
+[tabs]
+====
+Requirements for transferring product data::
++
+--
+Th product data comes from the catalogue *{assistant-name} Catalog* that you created. The following requirements must be met to ensure that product data is exported.
 
 * The plugins link:{marketplace-url}[{market}^] and *Mirakl Connector* were purchased and downloaded from plentyMarketplace and installed in a plugin set.
 * The order referrers {market} and Mirakl were activated in the *Setup » Orders » Order referrer* menu.
-* The basic settings were carried out in the *Setup » Assistants » Plugins » [select plugin set] » {assistant-name}* menu. In order to transfer product data, activate the option *Export products* in the step data exchange.
-* In the *Setup » Item » Sales prices* menu, the order referrers *Mirakl* and *{assistant-name}* have been activated on an existing price *_or_* a new sales price has been created for which the order referrers *Mirakl* and *{assistant-name}* were activated.
-* You already created a xref:data:marketplace-export.adoc#[catalogue] for the data transfer.
+* The basic settings were carried out in the *Setup » Assistants » Plugins » [select plugin set] » {assistant-name}* menu. +
+*_Important:_* In order to transfer product data, the option *Export products* has to be activated in the step *Data exchange*.
+* In the menu *Setup » Item » Sales prices*, the order referrers *Mirakl* and *{market}* are activated in an existing sales price. +
+*_Or:_* A new sales price was created. The order referrers *Mirakl* and *{market}* are active in this sales price.
+* You created a xref:data:marketplace-export.adoc#[catalogue] for the data transfer.
 
 ifdef::conrad[]
 [IMPORTANT]
 .What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
-====
+======
 In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
 The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default.
 
@@ -26,25 +31,81 @@ The offer field *product-id-type* is transferred with the value *SHOP_SKU* by de
 
 The product export field *Product-ID (of the seller)* is filled depending on the catalogue settings.
 During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
-====
+======
 endif::conrad[]
 
 ifdef::voelkner[]
 [IMPORTANT]
 .What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
-====
+======
 In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
 The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default, but can also be overwritten by another value, such as *SKU*. To do so, select the property for the Product ID Type *SKU* at the variation and in the assistant step *Offer properties mapping*, map the property to the respective data field.
 The product export field *Product-ID (of the seller)* is filled depending on the mapping in the catalogue.
 
 During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
-====
+======
 
 *_Tip:_* In the catalogue, map the Marketplace SKU to the data field *Product-ID (of the seller)*. Select the *Variation ID* as fallback data field.
 endif::voelkner[]
+--
+ 
+Requirements for transferring offer data::
++
+--
+* The plugins link:{marketplace-url}[{market}^] and *Mirakl Connector* were purchased and downloaded from plentyMarketplace and installed in a plugin set.
+* The order referrers *{market}* and *Mirakl* were activated in the *Setup » Orders » Order referrer* menu.
+* The basic settings were carried out in the *Setup » Assistants » Plugins » [Select plugin set] » {assistant-name}* menu.
+*_Important:_* In the step *Data exchange* of the assistant, the option *Synchronize stock* must be active for offers to be exported correctly.
+* In the menu *Setup » Item » Sales prices*, the order referrers *Mirakl* and *{market}* are activated in an existing sales price. +
+*_Or:_* A new sales price was created. The order referrers *Mirakl* and *{market}* are active in this sales price.
+
+Offer data is transferred every 15 minutes. Only items that meet the following requirements are transferred:
+
+* The order referrers *Mirakl* and *{market}* are activated at the variation.
+* A price that was activated for *{market}*, *Mirakl* and *WEB API* is active at the variation.
+* A shipping profile that has been activated for *{market}*, *Mirakl* and *WEB API* is active at the variation.
+* A value is specified for *{market}* as Marketplace SKU at the variation.
+* The setting *Limitation* of the variation is set to either the option *To net stock* or the option *None*.
+* The variation has positive stock.
+* Either the stock or the price was changed at the variation within the last 15 minutes. +
+*_Important:_* Setting a new time stamp via the group function or batch processing is not enough to transfer the variation.
+
+ifdef::conrad[]
+[IMPORTANT]
+.What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
+======
+In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
+The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default.
+
+// * If *SKU* is selected, the SKU from the marketplace has to be defined as Marketplace SKU at the variation.
+// * If *EAN* is selected, the EAN of the variation has to be defined as Marketplace SKU at the variation. Please do not use this function, as it is not activated for the market.
+// * If *ISBN* is selected, the ISBN of the variation has to be defined as Marketplace SKU at the variation. Please do not use this function, as it is not activated for the market.
+
+The product export field *Product-ID (of the seller)* is filled depending on the catalogue settings.
+During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
+======
+endif::conrad[]
+
+ifdef::voelkner[]
+[IMPORTANT]
+.What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
+======
+In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
+The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default, but can also be overwritten by another value, such as *SKU*. To do so, select the property for the Product ID Type *SKU* at the variation and in the assistant step *Offer properties mapping*, map the property to the respective data field.
+The product export field *Product-ID (of the seller)* is filled depending on the mapping in the catalogue.
+
+During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
+======
+
+*_Tip:_* In the catalogue, map the Marketplace SKU to the data field *Product-ID (of the seller)*. Select the *Variation ID* as fallback data field.
+endif::voelkner[]
+--
+====
+
 
 ////
 //TODO: Prüfen, ob das sichtbar sein sollte.
+Bezieht sich auf Produktdaten!
 === Werte für die Übertragung an den Marktplatz definieren
 
 The values *product-id* and *sku* are transferred as follows:
@@ -63,13 +124,13 @@ This results in the following mappings for the product transfer:
 ifdef::conrad,voelkner[]
 === Updating product data
 
-You can update the product data at any time. However, this does not apply to the following product data:
+You can update product data at any time. However, this does not apply to the following product data:
 
 * Packaging units
 * Manufacturer Part Number
 * Seller's item number (Variation ID)
 
-If you want to adjust one or several of the above-mentioned fields, you have to delete the product first and then transfer it again. To do so, proceed as follows.
+If you want to adjust one or several of these fields, you have to delete the product first and then transfer it again. This is how you do it:
 
 [.instruction]
 Updating product data:
@@ -78,8 +139,8 @@ Updating product data:
 . Create a property of the type *Text*.
 . Enter a name, for example *Delete marketplace product*.
 . Go to *Data » Catalogues*.
-. Open the corresponding catalogue.
-. Map the property that you just created for deleting the product to the data field *Invalidation Marking* or *InvalidationFlag*.
+. Open the {market} catalogue.
+. Map the property that you just created to the data field *Invalidation Marking* or *InvalidationFlag*.
 . Open the assistant.
 . Go to the step *Offer properties mapping*.
 . Map the data field *update-delete* to the property *{market} Update-Delete*.
@@ -92,11 +153,11 @@ Updating product data:
 . Manually delete the product's offer in the back end of the marketplace.
 . At the respective variation, activate the property that you created for deleting the product and enter the value *kill*.
 . Activate the property for the catalogue link at the variation.
-. Wait until the next product transfer. +
-→ This takes place over night.
+. Wait until after the products are exported next. +
+→  The export happens during night.
 . Once you have deleted the product, you need to wait 24 to 48 hours until you can use the same Product ID again.
-. As soon as the waiting time is over, remove the property that was created for deleting the product from the variation.
-. Activate the market availability again for the marketplace and Mirakl.
+. As soon as the waiting time is over, remove the property from the variation that was created for deleting the product.
+. Activate the market availability for the marketplace and Mirakl for the variation.
 endif::conrad,voelkner[]
 
 ifdef::voelkner[]
@@ -107,85 +168,60 @@ Voelkner offers an EAN matching. Ask your contact person of the marketplace to p
 For these values, it is not necessary to transfer the product data. You can directly create an offer by using the provided SKUs. The SKU has to be imported as Marketplace SKU at the variation and *sku* has to be selected as *product-id-type* at the variation. Make sure that you do not define a property value for the property *Voelkner category group* at these variations.
 endif::voelkner[]
 
-[#transfer-order-data]
-=== Transferring offer data
-
-In this chapter, you will learn how to transfer offer data to the marketplace and which requirements have to be met. The data comes from the *{assistant-name}* assistant which you already completed.
-
-
-=== Requirements for transferring offer data
-
-* The plugins link:{marketplace-url}[{market}^] and *Mirakl Connector* were purchased and downloaded from plentyMarketplace and installed in a plugin set.
-* The order referrers *{market}* and *Mirakl* were activated in the *Setup » Orders » Order referrer* menu.
-* The basic settings were carried out in the *Setup » Assistants » Plugins » [Select plugin set] » {assistant-name}* menu.
-** *Synchronise stock* is activated in the step data exchange so that the offers are transferred correctly.
-* In the *Setup » Item » Sales prices* menu, the order referrers *Mirakl* and *{market}* have been activated on an existing price *_or_* a new sales price has been created for which the order referrers *Mirakl* and *{market}* were activated.
-
-Offer data is transferred every 15 minutes. Only items that meet the following requirements are transferred:
-
-* The order referrers *Mirakl* and *{market}* are activated at the variation.
-* A price that was activated for *{market}*, *Mirakl* and *WEB API* is active at the variation.
-* A shipping profile that has been activated for *{market}*, *Mirakl* and *WEB API* is active at the variation.
-* A value is specified for *{market}* as Marketplace SKU at the variation.
-* The setting *Limitation* of the variation is set to either the option *To net stock* or the option *None*.
-* The variation has positive stock.
-* Either the stock or the price was changed at the variation within the last 15 minutes. +
-*_Important:_* Setting a new time stamp via the group function or batch processing is not enough to transfer the variation.
-
-ifdef::conrad[]
-[IMPORTANT]
-.What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
-====
-In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
-The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default.
-
-// * If *SKU* is selected, the SKU from the marketplace has to be defined as Marketplace SKU at the variation.
-// * If *EAN* is selected, the EAN of the variation has to be defined as Marketplace SKU at the variation. Please do not use this function, as it is not activated for the market.
-// * If *ISBN* is selected, the ISBN of the variation has to be defined as Marketplace SKU at the variation. Please do not use this function, as it is not activated for the market.
-
-The product export field *Product-ID (of the seller)* is filled depending on the catalogue settings.
-During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
-====
-endif::conrad[]
-
-ifdef::voelkner[]
-[IMPORTANT]
-.What connection exists between the offer fields, the product export field and the Marketplace SKU at the variation?
-====
-In general, the offer fields *sku* and *product-id* are always filled with the value that has been defined for the marketplace at the variation in the field *Marketplace SKU*.
-The offer field *product-id-type* is transferred with the value *SHOP_SKU* by default, but can also be overwritten by another value, such as *SKU*. To do so, select the property for the Product ID Type *SKU* at the variation and in the assistant step *Offer properties mapping*, map the property to the respective data field.
-The product export field *Product-ID (of the seller)* is filled depending on the mapping in the catalogue.
-
-During the first data transfer which takes place overnight, in plentymarkets, the Marketplace SKU at the variation is automatically created from the Variation ID. Alternatively, the Marketplace SKU can be defined via import or manually.
-====
-
-*_Tip:_* In the catalogue, map the Marketplace SKU to the data field *Product-ID (of the seller)*. Select the *Variation ID* as fallback data field.
-endif::voelkner[]
-
-ifdef::voelkner[]
-=== Error reports
-
-Error reports for product and offer data transfers to Voelkner can be accessed and downloaded in the menus *Data » Voelkner Product Reports* and *Data » Voelkner Offer Reports*.
-endif::voelkner[]
-
-[discrete]
+[#other-data-fields]
 === Further data fields that are transmitted during the offer transfer
 
-* *sku* and *product-id*: These fields are automatically filled with the value that has been specified as Marketplace SKU at the variation.
+plentymarkets fills some marketplace data fields automatically when orders are exported.
+
+[[table-other-data-fields]]
+.Marketplace data fields that are exported during the offer transfer
+[cols="1,3a"]
+|===
+|Setting |Explanation
+
+| *sku* +
+*product-id*
+| These fields are automatically filled with the value that has been specified as Marketplace SKU at the variation.
+
 ifdef::conrad,voelkner[]
-* *product-id-type*: This field is filled with the value *SHOP_SKU* by default.
+| *product-id-type*
+| This field is filled with the value *SHOP_SKU* by default.
 endif::conrad,voelkner[]
-* *price*: This field is automatically filled with the value hat has been defined at the variation for the price that was activated on the marketplace. In case several sales prices were defined at the variation that are also available for the marketplace, the price with the lowest ID will be exported.
-* *quantity*: This field will be automatically filled with the net stock or the total net stock from the warehouses that have been selected in the *{assistant-name}* assistant in the step *Warehouse Selection*.
-* *min-quantity-alert*: This field will be automatically transferred with the value *1*.
-* *state*: This field is transferred automatically with the value *11*. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation.
-* *available-start-date*: This field will be automatically transferred with a timestamp.
-* *price-ranges*: In this field, one or several xref:item:prices.adoc#100[sales prices] will be transferred.
-* *allow-quote-requests*: This field will be automatically transferred with the value *false*.
-* *logistic-class*: This field is empty by default. If no value is transferred, the variation is linked to the free shipping profile *{profile-free-shipping}*. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation. You can find the valid shipping profile codes in the {market} back end under *{market-backend-shipping}*. The codes are displayed in parentheses.
-* *leadtime-to-ship*: This is a mandatory field, which is empty by default. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation. Only integers between 1 and 45 are valid here.
+
+| *price*
+| This field is automatically filled with the value hat has been defined at the variation for the price that was activated on the marketplace. In case several sales prices were defined at the variation that are also available for the marketplace, the price with the lowest ID will be exported.
+| *quantity*
+| This field will be automatically filled with the net stock or the total net stock from the warehouses that have been selected in the *{assistant-name}* assistant in the step *Warehouse Selection*.
+
+| *min-quantity-alert*
+| This field will be automatically transferred with the value *1*.
+
+| *state*
+| This field is transferred automatically with the value *11*. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation.
+
+| *available-start-date*
+| This field will be automatically transferred with a timestamp.
+
+| *price-ranges*
+| In this field, one or several xref:item:prices.adoc#100[sales prices] will be transferred.
+
+| *allow-quote-requests*
+| This field will be automatically transferred with the value *false*.
+
+| *logistic-class*
+| This field is empty by default. If no value is transferred, the variation is linked to the free shipping profile *{profile-free-shipping}*. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation. You can find the valid shipping profile codes in the {market} back end under *{market-backend-shipping}*. The codes are displayed in parentheses.
+
+| *leadtime-to-ship*
+| This is a mandatory field, which is empty by default. In the assistant step *Offer properties mapping* you can map a property in order to transfer a different value per variation. Only integers between 1 and 45 are valid here.
+
 ifdef::conrad,voelkner[]
-* *reversecharge*: This is a mandatory field, which is empty by default. In the assistant step *Offer properties mapping* you can map a property in order to transfer either `true` or `false` per variation.
+| *reversecharge*
+| This is a mandatory field, which is empty by default. In the assistant step *Offer properties mapping* you can map a property in order to transfer either `true` or `false` per variation.
 endif::conrad,voelkner[]
-* *min-order-quantity*: This field is transferred automatically with the value *Min. order quantity* saved for the variation.
-* *max-order-quantity*: This field is transferred automatically with the value *Max. order quantity* saved for the variation.
+
+| *min-order-quantity*
+| This field is transferred automatically with the value *Min. order quantity* saved for the variation.
+
+| *max-order-quantity*
+| This field is transferred automatically with the value *Max. order quantity* saved for the variation.
+|===
