--- a/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
@@ -64,7 +64,7 @@ include::partial$properties-creation-table.adoc[]
 endif::mediamarkt[]
 
 [#property-attributes]
-=== Eigenschaft für Attribute erstellen
+=== Eigenschaften für Attribute erstellen
 
 Wenn du für eine oder alle deine Varianten mehrere xref:artikel:attribute.adoc#[Attribute] definiert hast, erstelle eine Eigenschaft, die diese Attribute vereint. Unterscheidest du bei einer Variante zum Beispiel sowohl nach Farbe als auch nach Größe, legst du eine Eigenschaft mit der Benennung "Grau XL" an. xref:artikel:eigenschaften.adoc#1400[Ordne diese Eigenschaften] deinen Varianten zu.
 
