--- a/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
@@ -14,8 +14,8 @@ Die Produktdaten kommen aus dem von dir erstellten Katalog *{assistant-name} Cat
 * Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte {market} und Mirakl aktiviert.
 * Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen. +
 *_Wichtig:_* Für die Produktübertragung muss die Option *Produkte exportieren* im Schritt *Datenaustausch* aktiv sein.
-* Im Menü *Einrichtung » Artikel » Verkaufspreise* wurden die Auftragsherkünfte *Mirakl* und *{assistant-name}* an einem bestehenden Preis aktiviert. +
-*_Oder:_* Ein neuer Verkaufspreis wurde erstellt, bei dem die Auftragsherkünfte *Mirakl* und *{assistant-name}*  aktiviert wurden.
+* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem vorhandenen Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
+*_Oder:_* Ein neuer Verkaufspreis wurde erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert sind.
 * Du hast einen xref:daten:marktplatzexport.adoc#[Katalog] für die Übertragung der Daten erstellt.
 
 ifdef::conrad[]
@@ -56,8 +56,8 @@ Voraussetzungen für Angebotsdatenübertragung::
 * Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte *{market}* und *Mirakl* aktiviert.
 * Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen.
 *_Wichtig:_* Im Schritt *Datenaustausch* des Assistenten muss die Option *Bestand synchronisieren* aktiviert sein, damit Angebote korrekt übertragen werden.
-* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem bestehenden Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
-*_Oder:_* Ein neuer Verkaufspreis ist erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert wurden.
+* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem vorhandenen Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
+*_Oder:_* Ein neuer Verkaufspreis wurde erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert sind.
 
 Die Angebotsübertragung findet alle 15 Minuten statt. Es werden nur Artikel übertragen, die die folgenden Voraussetzungen erfüllen:
 
