--- a/docs/en-gb/modules/markets/partials/mirakl-first-steps.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-first-steps.adoc
@@ -1,57 +1,43 @@
 [#register]
 == Registering with {market}
 
-In order to set up {market} in plentymarkets, you need your {market} access data which consist of your user name and password. You will receive this data from {market}. First, you have to create a user account for link:{registration-url}[{market}^]{nbsp}icon:external-link[].
+First, become a link:{registration-url}[{market}^]{nbsp}icon:external-link[] and create a {market} account. After registering, you will receive login details from {market}. You need these login details to set up {market} in plentymarkets.
 
-[#about]
-== About {market}
-
-In order to sell your items on the {type-of-market} {market} with plentymarkets, you need the *Mirakl Connector* plugin. The *Mirakl Connector* plugin connects {market} with your plentymarkets system. This enables {market} and plentymarkets to automatically exchange item and order data and you can offer your items on {market}.
-
-In order to be able to sell your items on {market}, you therefore have to <<#downloading-plugins, install the *Mirakl Connector* plugin>> first.
-
-ifdef::video-id[]
-To set up {market} in plentymarkets, you can either follow the instructions on this page or have a look at the following webinar:
-
-video::{video-id}[youtube]
-endif::video-id[]
+//TODO: insert Frequency of data exchange
 
 [#download-plugins]
-== Downloading the plugins Mirakl Connector and {market}
+== Downloading and installing the plugins
 
-You need a plugin in order to be able to offer your items on {market} with plentymarkets. Therefore, download the {market} plugin in the link:{marketplace-url}[plentyMarketplace^]{nbsp}icon:external-link[] first.
+You need the following plugins to send item data to {market}:
 
-{market} is connected with plentymarkets via the platform Mirakl. To use the {market} plugin, you also need the *Mirakl Connector* plugin. You can download the *Mirakl Conncetor* plugin in the link:https://marketplace.plentymarkets.com/en/mirakl_6917[plentyMarketplace^]{nbsp}icon:external-link[].
+[.collapseBox]
+.Why do I need two plugins?
+--
+{market} is connected with plentymarkets via the platform Mirakl. To sell your items on the {type-of-market} {market} with plentymarkets, you also need the *Mirakl Connector* plugin. The *Mirakl Connector* allows {market} and plentymarkets to automatically exchange item and order data and you can offer your items on {market}.
+--
 
-
-[#mirakl-install-plugin]
-== Installing Mirakl Connector
-
-Install the *Mirakl Connector* plugin as described below.
+* link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+* link:{plugin-link}[{plugin-name}^]
 
 :plugin: Mirakl Connector
 :main-client:
 
-include::plugins:partial$plugin-installieren-en_gb.adoc[]
-
+include::partial$plugin-installation.adoc[]
 :!plugin:
 
-[#market-install-plugin]
-== Installing the {market} plugin
-
-Next, install the *{market}* plugin.
-
-:plugin: {market}
+:plugin: {plugin-name}
 :priority: 1
 :main-client:
 
-include::plugins:partial$plugin-installieren-en_gb.adoc[]
+include::partial$plugin-installation.adoc[]
+:!plugin:
 
-////
+ifdef::video-id[]
+[#webinar]
+== Setup: Webinar
 
-:market:
-:registration-url:
-:type-of-market:
+To set up {market} in plentymarkets, you can either follow the instructions on this page or have a look at the following webinar:
 
-include::partial$mirakl-first-steps.adoc[]
-////
+video::{video-id}[youtube]
+
+endif::video-id[]
