--- a/docs/en-gb/modules/markets/partials/assistant-basic-instructions.adoc
+++ b/docs/en-gb/modules/markets/partials/assistant-basic-instructions.adoc
@@ -3,16 +3,21 @@ Carrying out settings in the assistant:
 
 . Go to {menu-path}.
 . Click on the assistant *{assistant-name}*.
-. Follow the instructions on the screen. If you need additional information about one of the options, expand the {number-of-boxes} shown below this instruction (icon:chevron-down[role="darkGrey"]).
+ifdef::zalando[]
+. In the step *Orders*, select the countries. +
+  → For each country you selected, a step *Stock* and a step *Prices* is added to the assistant.
+. Go through the newly added steps.
+endif::zalando[]
+. Follow the instructions on the screen. If you need additional information about one of the options, expand the {number-of-boxes} below this description (icon:chevron-down[role="darkGrey"]).
 . In the step *Summary*, check your settings to makes sure they are correct. +
-*_Tip:_* Click on the arrow in the step *Summary* (icon:chevron-down[role="darkGrey"]) to show the settings.
+*_Tip:_* In the *Summary* step, click on the arrow (icon:chevron-down[role="darkGrey"]) to show the settings.
 . If everything is as it should be, click on icon:check[role="green"] *Finalise*. +
 → The settings are saved. +
 ifdef::amazon-basic-assistant[]
 *_Tip:_* A separate account is created for each combination of one Amazon account and one Amazon platform. Go to *Setup » Markets » Amazon » Settings* to see this account.
 . Go to *Setup » Markets » Amazon » Settings*.
 . Open the account.
-. Check the settings and carry out any adjustments or additional settings if necessary.
+. Check the settings. If necessary, make adjustments or carry out additional settings.
 endif::amazon-basic-assistant[]
 
 ////
