move information on required raw data and plentyBI edition to top

--- a/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
@@ -13,6 +13,30 @@ Du entscheidest im Bereich xref:business-entscheidungen:absatz.adoc#100[Berechnu
 Wähle zusätzlich eine xref:business-entscheidungen:absatz.adoc#200[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:absatz.adoc#300[Filter] um zu konkretisieren, nach welchen Kriterien der Absatz berechnet werden soll.
 
+[#400]
+== Benötigte Rohdaten
+
+:kennzahl: Absatz
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#500]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#100]
 == Berechnung
 
@@ -922,26 +946,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-[#400]
-== Rohdaten
-
-:kennzahl: Absatz
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#500]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
