--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -13,6 +13,30 @@ _(∑ Auftragspositionen) : Auftragsanzahl = ø Anzahl der Auftragspositionen_ +
 Wähle zusätzlich eine xref:business-entscheidungen:durchschnittliche-anzahl-auftragspositionen.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:durchschnittliche-anzahl-auftragspositionen.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die durchschnittliche Anzahl der Auftragspositionen berechnet werden soll.
 
+[#300]
+== Benötigte Rohdaten
+
+:kennzahl: Durchschnittliche Anzahl der Auftragspositionen
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#400]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#100]
 == Dimension
 
@@ -905,26 +929,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-[#300]
-== Benötigte Rohdaten
-
-:kennzahl: Durchschnittliche Anzahl der Auftragspositionen
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#400]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
