--- a/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
@@ -13,6 +13,18 @@ Zurzeit kannst du mit der Kennzahl *{kennzahl}* die Warenbestandsinformationen z
 
 include::partial$kennzahlen-einleitung.adoc[]
 
+[#600]
+== Benötigte Rohdaten
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+* xref:business-entscheidungen:marketplacestockmovement.adoc#[marketplaceStockMovement]
+
+[#700]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#300]
 == Berechnung
 
@@ -147,15 +159,3 @@ include::partial$ist-nicht-gleich.adoc[]
 |====
 
 --
-
-[#600]
-== Benötigte Rohdaten
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-* xref:business-entscheidungen:marketplacestockmovement.adoc#[marketplaceStockMovement]
-
-[#700]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
