--- a/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
@@ -14,6 +14,30 @@ _∑ Steuerbetrag = Umsatzsteuer gesamt_ +
 Wähle zusätzlich eine xref:business-entscheidungen:umsatzsteuer-gesamt.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:umsatzsteuer-gesamt.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die Umsatzsteuer gesamt berechnet werden soll.
 
+[#400]
+== Benötigte Rohdaten
+
+:kennzahl: Umsatzsteuer gesamt
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#500]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#100]
 == Dimension
 
@@ -906,26 +930,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-[#400]
-== Benötigte Rohdaten
-
-:kennzahl: Umsatzsteuer gesamt
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#500]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
