--- a/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
@@ -24,6 +24,19 @@ The marketplace variation validation is a new feature. We are working on offerin
 
 include::partial$key-figure-introduction.adoc[]
 
+[#600]
+== Required raw data
+
+include::partial$key-figure-requirement-raw-data.adoc[]
+
+* xref:business-decisions:marketplacevariationvalidation.adoc#[variationValidation]
+
+[#700]
+== plentyBI edition
+
+include::partial$key-figure-requirement-edition.adoc[]
+
+
 [#300]
 == Calculation
 
@@ -180,15 +193,3 @@ include::partial$is-not-equal.adoc[]
 |====
 
 --
-
-[#600]
-== Required raw data
-
-include::partial$key-figure-requirement-raw-data.adoc[]
-
-* xref:business-decisions:marketplacevariationvalidation.adoc#[variationValidation]
-
-[#700]
-== Edition
-
-include::partial$key-figure-requirement-edition.adoc[]
