--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
@@ -14,6 +14,31 @@ Wähle zusätzlich eine xref:business-entscheidungen:durchschnittlicher-bestellw
 Setze außerdem xref:business-entscheidungen:durchschnittlicher-bestellwert.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien der durchschnittliche Bestellwert berechnet werden soll.
 Beachte hier vor allem den Filter *Auftragstyp*.
 
+[#300]
+== Benötigte Rohdaten
+
+:kennzahl: Durchschnittlicher Bestellwert
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#400]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
+
 [#100]
 == Dimension
 
@@ -907,26 +932,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-[#300]
-== Benötigte Rohdaten
-
-:kennzahl: Durchschnittlicher Bestellwert
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#400]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
