--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -19,6 +19,30 @@ Setze außerdem xref:business-entscheidungen:retourenquote.adoc#300[Filter] um z
 Möchtest du die reine Retourenquote errechnen lassen? Dann muss beim Erstellen der Kennzahl zwingend nach dem Auftragstyp *Retoure* gefiltert werden. Aufgrund der oben beschriebenen Formel fließen sonst auch Gutschriften mit in die Berechnung ein, sodass falsche Ergebnisse entstehen.
 ====
 
+[#400]
+== Benötigte Rohdaten
+
+:kennzahl: Retourenquote
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#500]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#100]
 == Berechnung
 
@@ -925,26 +949,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-[#400]
-== Benötigte Rohdaten
-
-:kennzahl: Retourenquote
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#500]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
