--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -14,6 +14,30 @@ So kannst entweder den Brutto-Versandumsatz mit Umsatzsteuer oder den Netto-Vers
 Wähle zusätzlich eine xref:business-entscheidungen:versandumsatz.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:versandumsatz.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien der Versandumsatz berechnet werden soll.
 
+[#400]
+== Benötigte Rohdaten
+
+:kennzahl: Versandumsatz
+
+include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+[#500]
+== plentyBI Edition
+
+include::partial$kennzahlen-voraussetzungen-edition.adoc[]
+
 [#100]
 == Berechnung
 
@@ -898,27 +922,3 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
-
-[#400]
-== Rohdaten
-
-:kennzahl: Versandumsatz
-
-include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-rohdaten-aktivieren.adoc[]
-
-[#500]
-== Edition
-
-include::partial$kennzahlen-voraussetzungen-edition.adoc[]
