--- a/docs/en-gb/modules/business-decisions/pages/live-orders.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/live-orders.adoc
@@ -13,6 +13,11 @@ In addition, select a xref:business-decisions:orders-live.adoc#200[dimension] to
 Set xref:business-decisions:orders-live.adoc#300[filters] to specify the criteria for the calculation of the orders.
 Note that those orders are counted that you define in the filter *Order type*. If you don't set this filter, all orders of all order types are counted.
 
+[#400]
+== plentyBI edition
+
+include::partial$key-figure-requirement-edition.adoc[]
+
 [#100]
 == Calculation type
 
@@ -262,8 +267,3 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
-[#400]
-== Edition
-
-include::partial$key-figure-requirement-edition.adoc[]
