--- a/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
@@ -11,6 +11,22 @@ plentymarkets calculates the key figure *Messages* based on the number of messag
 
 By selecting a xref:business-decisions:messages.adoc#100[calculation type], you decide whether to calculate with the number of messages or the sum of minutes. In addition, select a xref:business-decisions:messages.adoc#200[dimension] and xref:business-decisions:messages.adoc#300[filters] to specify the criteria for calculating the messages.
 
+[#400]
+== Required raw data
+
+:key-figure: Messages
+
+include::partial$key-figure-requirement-raw-data.adoc[]
+
+* xref:business-decisions:messages-raw-data.adoc#[messages]
+
+include::partial$plentyBI-activate-raw-data.adoc[]
+
+[#500]
+== plentyBI edition
+
+include::partial$key-figure-requirement-edition.adoc[]
+
 [#100]
 == Calculation
 
@@ -456,22 +472,6 @@ include::partial$less-than.adoc[]
 |====
 
 --
-
-[#400]
-== Required raw data
-
-:key-figure: Messages
-
-include::partial$key-figure-requirement-raw-data.adoc[]
-
-* xref:business-decisions:messages-raw-data.adoc#[messages]
-
-include::partial$plentyBI-activate-raw-data.adoc[]
-
-[#500]
-== Edition
-
-include::partial$key-figure-requirement-edition.adoc[]
 
 ////
 [#600]
