ADD translation of the group functions page

--- a/docs/de-de/modules/artikel/pages/group-functions.adoc
+++ b/docs/de-de/modules/artikel/pages/group-functions.adoc
@@ -8,8 +8,7 @@
 zuletzt bearbeitet 18.07.2022
 ////
 
-//ToDo - GIF for the variation group function
-//ToDo - English translation
+//NOTE - any time the translation is updated with Memsource, afterwards you need to manually restructure the english page because the list of group functions is alphabetical, so sorted differently in DE and EN
 //ToDo - FAQ Kapitel ergänzen
 
 Dein Business läuft und du hast bereits ein solides Produktportfolio aufgebaut.
