--- a/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
@@ -31,10 +31,10 @@ ifdef::main-client[*_Hinweis:_* Das Plugin-Set muss mit dem Hauptmandanten verkn
 ifdef::priority[]
 . Klicke im Menü links auf *Prioritäten festlegen*.
 . Setze die Priorität von *{plugin}* auf {priority}.
-. *Speichere* (icon:save[role=green]) die Einstellung. +
+. Speichere (icon:save[role=green]) die Einstellung. +
 → Das Plugin-Set wird angezeigt.
 endif::priority[]
 . Ändere den Zustand des Plugins zu aktiv (icon:toggle-on[role=blue]).
-. *Speichere* (icon:save[role=green]) das Plugin-Set. +
+. Speichere (icon:save[role=green]) das Plugin-Set. +
 *_Tipp:_* Probleme beim Speichern? Klicke auf *Details öffnen*, um weitere Informationen anzuzeigen.
 --
