--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -1,5 +1,5 @@
 [.collapseBox]
-.Adding and installing the plugin *{plugin}* in your plentymarkets system
+*{plugin}*: Adding and installing the plugin
 --
 
 [.instruction]
@@ -21,14 +21,20 @@ Installing plugins:
 
 . Go to *Plugins » Plugin set overview*.
 . Click on the plugin set in which you want to install the plugin. +
+ifdef::main-client[*_Important:_* The plugin set must be linked to the main client. +]
 → The plugin set opens.
-. Click on icon:plus-square[role=green] *Add new plugin*.
+. Click on icon:plus-square[role=green]*Add plugin*.
 . Select *{plugin}* from the plugin list.
-. Click on icon:download[role=purple] *Install*. +
+. Click on icon:download[role=purple]*Install*. +
 → The plugin is installed. +
 → The plugin set is shown.
-. Switch the plugin active (icon:toggle-on[role=blue]).
-. *Save* (icon:save[role=green]) the plugin set. +
+ifdef::priority[]
+. In the menu on the left, click on *Set priorities*.
+. Set the priority for *{plugin}* to {priority}.
+. Save (icon:save[role=green]) the setting. +
+→ The plugin set is shown.
+endif::priority[]
+. Switch the plugin to active (icon:toggle-on[role=blue]).
+. Save (icon:save[role=green]) the plugin set. +
 *_Tip:_* Problems saving the plugin set? Click on *Open details* to show additional information.
-
 --
