--- a/docs/de-de/modules/maerkte/partials/_galeria.adoc
+++ b/docs/de-de/modules/maerkte/partials/_galeria.adoc
@@ -13,7 +13,7 @@ include::{includedir}/_header.adoc[]
 [IMPORTANT]
 .GALERIA-Plugin herunterladen
 ====
-Die Schnittstelle zu GALERIA wird über ein Plugin integriert. Um das GALERIA-Plugin nutzen zu können, lade das link:https://marketplace.plentymarkets.com/plugins/channels/marktplaetze/XXXX_XXXX[Plugin im plentyMarketplace^]{nbsp}icon:external-link[] herunter.
+Die Schnittstelle zu GALERIA wird über ein Plugin integriert. Um das GALERIA-Plugin nutzen zu können, lade das link:https://marketplace.plentymarkets.com/plugins/channels/marktplaetze/XXXX_XXXX[Plugin im plentyMarketplace^] herunter.
 ====
 
 [#100]
@@ -42,7 +42,7 @@ GALERIA ist ein geschlossener Marktplatz. Du benötigst also einen Vertrag, um a
 [#150]
 == GALERIA-Plugin installieren
 
-Um GALERIA in plentymarkets nutzen zu können, installiere zunächst das link:XXXX[GALERIA-Plugin^] in deinem plentymarkets System. Das Plugin erhältst du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^]{nbsp}icon:external-link[].
+Um GALERIA in plentymarkets nutzen zu können, installiere zunächst das link:XXXX[GALERIA-Plugin^] in deinem plentymarkets System. Das Plugin erhältst du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^].
 
 // Wird das Plugin freigeschaltet oder ist es im marketplace sichtbar?
 
