--- a/docs/de-de/modules/maerkte/partials/mirakl-data-link-categories.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-link-categories.adoc
@@ -24,4 +24,4 @@ Variante mit Kategorie verknüpfen:
 *_Weitere Möglichkeiten zum Verknüpfen von Varianten:_*
 
 * Per Import: Über *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* die Eigenschaft *{assistant-name} Kategoriemapping* aufrufen und auf *Werte* klicken. Dort sind die Auswahlwert-IDs zu finden, die für den Import notwendig sind.
-* Per REST-API: Verwende dazu die REST-Routen aus den Bereichen link:https://developers.plentymarkets.com/en-gb/plentymarkets-rest-api/index.html#/Property[Property^]{nbsp}icon:external-link[] und link:https://developers.plentymarkets.com/en-gb/plentymarkets-rest-api/index.html#/Item[Item^]{nbsp}icon:external-link[], um den Katalog mit der Variante zu verknüpfen. +
+* Per REST-API: Verwende dazu die REST-Routen aus den Bereichen link:https://developers.plentymarkets.com/en-gb/plentymarkets-rest-api/index.html#/Property[Property^] und link:https://developers.plentymarkets.com/en-gb/plentymarkets-rest-api/index.html#/Item[Item^], um den Katalog mit der Variante zu verknüpfen. +
