--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -673,16 +673,11 @@ Artikelfilter aus der Dropdown-Liste wählen und *Hinzufügen*. Standardmäßig 
 |===
 
 [#order-processing]
-=== Aufträge verwalten
-
-Die folgenden Unterkapitel erklären die Einrichtung und Besonderheiten der Auftragsschnittstelle.
-
-[#order-processing]
 === Auftragsabwicklung automatisieren
 
 Richte Ereignisaktionen ein, um Galaxus automatisch über Auftragsänderungen zu informieren.
 
-[#order-processing]
+[#event-procedures]
 ==== Verfügbare Ereignisaktionen
 
 Für Galaxus sind die in <<#galaxus-event-procedures>> aufgeführten Ereignisaktionen verfügbar.
