--- a/docs/en-gb/modules/markets/pages/galaxus.adoc
+++ b/docs/en-gb/modules/markets/pages/galaxus.adoc
@@ -672,16 +672,11 @@ Select an item filter from the drop-down list and click on *Add*. There are no f
 |===
 
 [#order-processing]
-=== Managing orders
-
-The following sub-chapters explain the setup and particularities of the order interface.
-
-[#order-processing]
 === Automating order processing
 
 Set up event procedures to notify Galaxus about order changes automatically.
 
-[#order-processing]
+[#event-procedures]
 ==== Available event procedures
 
 For Galaxus, the event procedures listed in <<#galaxus-event-procedures>> are available.
