--- a/docs/en-gb/modules/markets/partials/catalogue-mirakl-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mirakl-mapping.adoc
@@ -14,12 +14,11 @@ Voelkner and Conrad use the attribute help tool. Mediamarkt only has a CSV file.
 
 | *Brand*
 a| Create a property of type *Text* for this marketplace data field.
+
 ifdef::mirakl-csv[You can find all valid values in the CSV file.]
 ifdef::mirakl-attribute-help-tool[Use the <<#attribute-help-tool, attribute help tool>> to find all valid values.]
 
-ifdef::voelkner[]
-Is a brand missing? Then contact stefanie.schlosser@re-in.de.
-endif::voelkner[]
+ifdef::voelkner[Is a brand missing? Then contact stefanie.schlosser@re-in.de.]
 ====
 
 | *Product title*
