--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -69,7 +69,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 
 === Auftragsherkunft Plugin, Erstellungsdatum
 
-:kennzahl: Die Kennzahl Aufträge
+:kennzahl: Die Retourenquote
 :das-bedeutet: So erkennst du auf einen Blick, wie viel Versandumsatz aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, generiert wird. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
 include:partial$order-referrer-plugin-creation-date.adoc[]
