--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -49,7 +49,7 @@ include::partial$artikelkategorie-erstellungsdatum.adoc[]
 
 === Auftragsherkunft Plugin, Erstellungsdatum
 
-:kennzahl: Die Kennzahl Aufträge
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, durchschnittlich verkauft werden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
 include:partial$order-referrer-plugin-creation-date.adoc[]
