--- a/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
@@ -14,43 +14,33 @@ In addition, select a xref:business-decisions:average-order-value.adoc#100[dimen
 Set xref:business-decisions:average-order-value.adoc#200[filters] to specify the criteria for the calculation of the average order value.
 Make sure to be aware of the information given for the filter *Order type*.
 
+[#300]
+== Required raw data
+
+:key-figure: Average order value
+
+include::partial$key-figure-requirement-raw-data.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-activate-raw-data.adoc[]
+
+[#400]
+== plentyBI Edition
+
+include::partial$key-figure-requirement-edition.adoc[]
+
+
 [#100]
 == Dimension
-
-=== Creation date
-
-:key-figure: The average order value
-:this-means: This means that the date on which the orders were created is considered in the calculation.
-
-include::partial$creation-date.adoc[]
-
-=== Invoice country, creation date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated in which invoice country. A further differentiation is made according to the creation date of the orders.
-
-include::partial$invoice-country-creation-date.adoc[]
-
-=== Delivery country, creation date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated in which country of delivery. A further differentiation is made according to the creation date of the orders.
-
-include::partial$delivery-country-creation-date.adoc[]
-
-=== Date of outgoing items
-
-:key-figure: The average order value
-:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
-
-include::partial$date-outgoing-items.adoc[]
-
-=== Order referrer, creation date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the creation date of the orders.
-
-include::partial$order-referrer-creation-date.adoc[]
 
 === Item category, creation date
 
@@ -59,19 +49,54 @@ include::partial$order-referrer-creation-date.adoc[]
 
 include::partial$item-category-creation-date.adoc[]
 
-=== Warehouse, creation date
+=== Order referrer plugin, creation date
 
 :key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how much average order value is generated broken down by plugins that create orders in your plentymarkets system. A further differentiation is made according to the creation date of the orders.
 
-include::partial$warehouse-creation-date.adoc[]
+include:partial$order-referrer-plugin-creation-date.adoc[]
 
-=== Client, creation date
+=== Order referrer, creation date
 
 :key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the creation date of the orders.
 
-include::partial$client-creation-date.adoc[]
+include::partial$order-referrer-creation-date.adoc[]
+
+=== Order referrer, completion date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+
+include::partial$order-referrer-date-outgoing-items.adoc[]
+
+=== Order referrer, payment date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the date on which a payment was assigned to the order.
+
+include::partial$order-referrer-payment-date.adoc[]
+
+=== Subscription end date
+
+:key-figure: The average order value
+:this-means: This means that the end date of the subscription is considered in the calculation.
+
+include:partial$subscription-end-date.adoc[]
+
+=== Subscription item end date
+
+:key-figure: The average order value
+:this-means: This means that the end date of the items included in the subscription is considered in the calculation.
+
+include:partial$subscription-item-end-date.adoc[]
+
+=== Creation date
+
+:key-figure: The average order value
+:this-means: This means that the date on which the orders were created is considered in the calculation.
+
+include::partial$creation-date.adoc[]
 
 === Manufacturer, creation date
 
@@ -80,12 +105,96 @@ include::partial$client-creation-date.adoc[]
 
 include::partial$manufacturer-creation-date.adoc[]
 
+=== Contact, creation date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which contact. A further differentiation is made according to the creation date of the orders.
+
+include:partial$contact-creation-date.adoc[]
+
+=== Warehouse, creation date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the creation date of the orders.
+
+include::partial$warehouse-creation-date.adoc[]
+
+=== Warehouse, completion date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+
+include::partial$warehouse-date-outgoing-items.adoc[]
+
+=== Warehouse, payment date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
+
+include::partial$warehouse-payment-date.adoc[]
+
+=== Delivery country, creation date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated in which country of delivery. A further differentiation is made according to the creation date of the orders.
+
+include::partial$delivery-country-creation-date.adoc[]
+
+=== Client, creation date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the creation date of the orders.
+
+include::partial$client-creation-date.adoc[]
+
+=== Client, completion date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+
+include::partial$client-date-outgoing-items.adoc[]
+
+=== Client, payment date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the date on which a payment was assigned to the order.
+
+include::partial$client-payment-date.adoc[]
+
+=== Invoice country, creation date
+
+:key-figure: The average order value
+:this-means: This way, you can see at a glance how much average order value is generated in which invoice country. A further differentiation is made according to the creation date of the orders.
+
+include::partial$invoice-country-creation-date.adoc[]
+
 === Return reason, creation date
 
 :key-figure: The average order value
 :this-means: This way, you can see at a glance how the average order value is affected by return reasons. A further differentiation is made according to the creation date of the orders.
 
 include::partial$return-reason-creation-date.adoc[]
+
+=== Subscription start date
+
+:key-figure: The average order value
+:this-means: This means that the start date of the subscription is considered in the calculation.
+
+include:partial$subscription-start-date.adoc[]
+
+=== Subscription item start date
+
+:key-figure: The average order value
+:this-means: This means that the start date of the items included in the subscription is considered in the calculation.
+
+include:partial$subscription-item-start-date.adoc[]
+
+=== Date of outgoing items
+
+:key-figure: The average order value
+:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
+
+include::partial$date-outgoing-items.adoc[]
 
 === Payment method, creation date
 
@@ -100,48 +209,6 @@ include::partial$payment-method-creation-date.adoc[]
 :this-means: This means that the date on which a payment was assigned to the orders is considered in the calculation.
 
 include::partial$payment-date.adoc[]
-
-=== Order referrer, payment date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$order-referrer-payment-date.adoc[]
-
-=== Warehouse, payment date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$warehouse-payment-date.adoc[]
-
-=== Client, payment date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$client-payment-date.adoc[]
-
-=== Order referrer, completion date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which order referrer. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$order-referrer-date-outgoing-items.adoc[]
-
-=== Warehouse, completion date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$warehouse-date-outgoing-items.adoc[]
-
-=== Client, completion date
-
-:key-figure: The average order value
-:this-means: This way, you can see at a glance how much average order value is generated through which client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$client-date-outgoing-items.adoc[]
 
 [#200]
 == Filters
@@ -503,7 +570,7 @@ include::partial$outgoing-items-booked.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected values (icon:check-square[role="blue"])
+:filter: selected values (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
@@ -525,7 +592,7 @@ include::partial$payment-status.adoc[]
 .Comparison operators available for this filter
 --
 
-:filter-ending: selected values (icon:check-square[role="blue"])
+:filter: selected values (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-payment-status]]
@@ -539,7 +606,7 @@ include::partial$is-equal-to.adoc[]
 
 --
 
-// Warehouse
+Warehouse
 
 include::partial$warehouse.adoc[]
 
@@ -865,26 +932,3 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-[#300]
-== Required raw data
-
-:key-figure: Average order value
-
-include::partial$key-figure-requirement-raw-data.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-activate-raw-data.adoc[]
-
-[#400]
-== Edition
-
-include::partial$key-figure-requirement-edition.adoc[]
