--- a/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
@@ -19,6 +19,30 @@ Set xref:business-decisions:return-rate.adoc#300[filters] to specify the criteri
 Do you want to use this key figure to calculate the precise return rate? Then it is mandatory to set the filter for the order type *Return* when creating the key figure. If this is not done, credit notes will be considered for the calculation as outlined in the formula above. This leads to inaccurate results.
 ====
 
+[#400]
+== Required raw data
+
+:key-figure: Return rate
+
+include::partial$key-figure-requirement-raw-data.adoc[]
+
+include::partial$orders.adoc[]
+
+include::partial$orderitems.adoc[]
+
+include::partial$orderitemamounts.adoc[]
+
+include::partial$orderproperties.adoc[]
+
+include::partial$itemvariations.adoc[]
+
+include::partial$plentyBI-activate-raw-data.adoc[]
+
+[#500]
+== plentyBI Edition
+
+include::partial$key-figure-requirement-edition.adoc[]
+
 [#100]
 == Calculation
 
@@ -36,33 +60,19 @@ Note that you have to set the filter *Order type* with the selection credit note
 [#200]
 == Dimension
 
-=== Creation date
+=== Item category, creation date
 
 :key-figure: The return rate
-:this-means: This means that the date on which the orders were created is considered in the calculation.
+:this-means: This way, you can see at a glance how high the return rate is broken down by item category. A further differentiation is made according to the creation date of the orders.
 
-include::partial$creation-date.adoc[]
+include::partial$item-category-creation-date.adoc[]
 
-=== Invoice country, creation date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
-
-include::partial$invoice-country-creation-date.adoc[]
-
-=== Delivery country, creation date
+=== Order referrer plugin, creation date
 
 :key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how the return rate is broken down by plugins that create orders in your plentymarkets system. A further differentiation is made according to the creation date of the orders.
 
-include::partial$delivery-country-creation-date.adoc[]
-
-=== Date of outgoing items
-
-:key-figure: The return rate
-:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
-
-include::partial$date-outgoing-items.adoc[]
+include:partial$order-referrer-plugin-creation-date.adoc[]
 
 === Order referrer, creation date
 
@@ -71,26 +81,40 @@ include::partial$date-outgoing-items.adoc[]
 
 include::partial$order-referrer-creation-date.adoc[]
 
-=== Item category, creation date
+=== Order referrer, completion date
 
 :key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by item category. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
-include::partial$item-category-creation-date.adoc[]
+include::partial$order-referrer-date-outgoing-items.adoc[]
 
-=== Warehouse, creation date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the creation date of the orders.
-
-include::partial$warehouse-creation-date.adoc[]
-
-=== Client, creation date
+=== Order referrer, payment date
 
 :key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which a payment was assigned to the order.
 
-include::partial$client-creation-date.adoc[]
+include::partial$order-referrer-payment-date.adoc[]
+
+=== Subscription end date
+
+:key-figure: The return rate
+:this-means: This means that the end date of the subscription is considered in the calculation.
+
+include:partial$subscription-end-date.adoc[]
+
+=== Subscription item end date
+
+:key-figure: The return rate
+:this-means: This means that the end date of the items included in the subscription is considered in the calculation.
+
+include:partial$subscription-item-end-date.adoc[]
+
+=== Creation date
+
+:key-figure: The return rate
+:this-means: This means that the date on which the orders were created is considered in the calculation.
+
+include::partial$creation-date.adoc[]
 
 === Manufacturer, creation date
 
@@ -99,12 +123,96 @@ include::partial$client-creation-date.adoc[]
 
 include::partial$manufacturer-creation-date.adoc[]
 
+=== Contact, creation date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by contact. A further differentiation is made according to the creation date of the orders.
+
+include:partial$contact-creation-date.adoc[]
+
+=== Warehouse, creation date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the creation date of the orders.
+
+include::partial$warehouse-creation-date.adoc[]
+
+=== Warehouse, completion date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+
+include::partial$warehouse-date-outgoing-items.adoc[]
+
+=== Warehouse, payment date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
+
+include::partial$warehouse-payment-date.adoc[]
+
+=== Delivery country, creation date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the creation date of the orders.
+
+include::partial$delivery-country-creation-date.adoc[]
+
+=== Client, creation date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the creation date of the orders.
+
+include::partial$client-creation-date.adoc[]
+
+=== Client, completion date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+
+include::partial$client-date-outgoing-items.adoc[]
+
+=== Client, payment date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
+
+include::partial$client-payment-date.adoc[]
+
+=== Invoice country, creation date
+
+:key-figure: The return rate
+:this-means: This way, you can see at a glance how high the return rate is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
+
+include::partial$invoice-country-creation-date.adoc[]
+
 === Return reason, creation date
 
 :key-figure: The return rate
 :this-means: This way, you can see at a glance how high the return rate is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
 
 include::partial$return-reason-creation-date.adoc[]
+
+=== Subscription start date
+
+:key-figure: The return rate
+:this-means: This means that the start date of the subscription is considered in the calculation.
+
+include:partial$subscription-start-date.adoc[]
+
+=== Subscription item start date
+
+:key-figure: The return rate
+:this-means: This means that the start date of the items included in the subscription is considered in the calculation.
+
+include:partial$subscription-item-start-date.adoc[]
+
+=== Date of outgoing items
+
+:key-figure: The return rate
+:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
+
+include::partial$date-outgoing-items.adoc[]
 
 === Payment method, creation date
 
@@ -119,48 +227,6 @@ include::partial$payment-method-creation-date.adoc[]
 :this-means: This means that the date on which a payment was assigned to the orders is considered in the calculation.
 
 include::partial$payment-date.adoc[]
-
-=== Order referrer, payment date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$order-referrer-payment-date.adoc[]
-
-=== Warehouse, payment date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$warehouse-payment-date.adoc[]
-
-=== Client, payment date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
-
-include::partial$client-payment-date.adoc[]
-
-=== Order referrer, completion date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$order-referrer-date-outgoing-items.adoc[]
-
-=== Warehouse, completion date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$warehouse-date-outgoing-items.adoc[]
-
-=== Client, completion date
-
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
-
-include::partial$client-date-outgoing-items.adoc[]
 
 [#300]
 == Filters
@@ -557,7 +623,7 @@ include::partial$is-equal-to.adoc[]
 
 --
 
-// Warehouse
+Warehouse
 
 include::partial$warehouse.adoc[]
 
@@ -883,27 +949,3 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
-[#400]
-== Required raw data
-
-:key-figure: Return rate
-
-include::partial$key-figure-requirement-raw-data.adoc[]
-
-include::partial$orders.adoc[]
-
-include::partial$orderitems.adoc[]
-
-include::partial$orderitemamounts.adoc[]
-
-include::partial$orderproperties.adoc[]
-
-include::partial$itemvariations.adoc[]
-
-include::partial$plentyBI-activate-raw-data.adoc[]
-
-[#500]
-== Edition
-
-include::partial$key-figure-requirement-edition.adoc[]
