--- a/docs/de-de/modules/maerkte/partials/katalog-mirakl-zuordnungen.adoc
+++ b/docs/de-de/modules/maerkte/partials/katalog-mirakl-zuordnungen.adoc
@@ -17,10 +17,7 @@ a| Erstelle für dieses Marktplatz-Datenfeld eine Eigenschaft vom Typ *Text*.
 ifdef::mirakl-csv[Alle gültigen Werte findest du in der entsprechenden CSV-Datei.]
 ifdef::mirakl-attribut-hilfetool[Alle gültigen Werte findest du mit dem <<#attribut-hilfetool, Attribut-Hilfetool>>.]
 
-ifdef::voelkner[]
-Fehlt eine Marke? Dann wende dich an stefanie.schlosser@re-in.de.
-endif::voelkner[]
-====
+ifdef::voelkner[Fehlt eine Marke? Dann wende dich an stefanie.schlosser@re-in.de.]
 
 | *Produktbezeichnung*
 a| Ordne für dieses Marktplatz-Datenfeld eines oder mehrere der folgenden plentymarkets Datenfelder zu. Verwende mindestens 20 und maximal 100 Zeichen. +
