--- a/docs/en-gb/modules/markets/pages/mediamarkt.adoc
+++ b/docs/en-gb/modules/markets/pages/mediamarkt.adoc
@@ -13,6 +13,7 @@
 :assistant-name: MediaMarkt
 :valid-values-zip: https://drive.google.com/file/d/1a_QY4VOIuC2-qYFbNkCMUX-9jerGDAOmYP72907Xt/view?usp=sharing
 :market-backend-shipping: Platform Settings » Shipping
+:mirakl-menu-shipping: Platform Settings » Shipping
 :referrer-name: pass:quotes[referrer *MediaMarkt*]
 :category-example: VIDEO CASSETTES
 
